amortization-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Amortization_Step__c/SuperTRUMP_Loan_Amortization_Step__c.object-meta.xml
<CustomObject>
    <label>SuperTRUMP Loan Amortization Step</label>
    <nameField>
        <displayFormat>LAS-{00000}</displayFormat>
        <label>Amortization Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuperTRUMP Loan Amortization Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>