amortization-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Amortization_Step__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <referenceTo>IST__SuperTRUMP_PQ_Loan__c</referenceTo>
    <relationshipLabel>Loan Amortization Steps</relationshipLabel>
    <relationshipName>Loan_Amortization_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>