amortization-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Amortization_Step__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <label>Principal</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>