amortization-mappings/force-app/main/default/objects/SuperTRUMP_Loan_Amortization_Step__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>